--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -33,10 +33,10 @@ jobs:
       with:
         arguments: build
     - name: Build and Push Docker Image 
-      uses: rossmaclean/docker-build-push-action@v0.0.27
+      uses: docker/login-action@v3
       with:
          image: laeeqa222/myrepo
          registry: docker.io
-         username: ${{  secrets.DOCKER_USERNAME }}
+         username: ${{ secrets.DOCKER_USERNAME }}
          password: ${{ secrets.DOCKER_PASSWORD }}
             
